--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ experiments/data/
 experiments/sparse_CCA/logs/
 experiments/sparse_CCA/results
 .RData
+.Rhistory
 experiments/sparse_CCA/results/results/
 fMRI-data/
