--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ experiments/sparse_CCA/results/
 .Rhistory
 experiments/sparse_CCA/results/results/
 fMRI-data/
+.Rproj.user
+.png
+.csv
+group-CCA.Rproj
