--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ elena/missing/results/*
 experiments/sparse_CCA/results/results/
 fMRI-data/
 .Rproj.user
-.png
-.csv
-.pdf
+*.png
+*.csv
+*.ipynb
+*.pdf
 group-CCA.Rproj
+elena/Code/.ipynb_checkpoints/*
